Fix T61570: Monkey primitive fill color wrong

This was introduced by error in a previous commit.